# hattrick_fun_with_flags

./: .gitignore  122.png.1  122_inactive.png.1  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  DOCKERFILE  README.md  README.rst  babel.cfg  pyproject-rye.toml  pyproject.toml
.github/workflows/: main.yaml
docker/: Dockerfile.app  Dockerfile.couchdb  docker-compose.yaml  local.ini
fun_with_flags/: __init__.py  achievements.py  api.py  auth.py  challenge.py  db.py  decs.py  flags.py  helperf.py  scheduler.py  settings.py  stripe.py  wsgi.py
fun_with_flags/docker/: Dockerfile.app  Dockerfile.couchdb
fun_with_flags/static/: style.css
fun_with_flags/templates/: base.html  index.html
fun_with_flags/templates/achievements/: achievements.html
fun_with_flags/templates/auth/: authorize.html  login.html  logout.html
fun_with_flags/templates/challenge/: challenge.html  overview.html
fun_with_flags/templates/flags/: details.html  overview.html
fun_with_flags/templates/scheduler/: scheduler.html
fun_with_flags/templates/settings/: overview.html  settings.html
fun_with_flags/templates/stripe/: hook.html
fun_with_flags/translations/de/LC_MESSAGES/: messages.mo  messages.po
fun_with_flags/translations/fr/LC_MESSAGES/: messages.mo  messages.po
fun_with_flags/translations/ro/LC_MESSAGES/: messages.mo  messages.po
fun_with_flags/translations/tr/LC_MESSAGES/: messages.po
instance/: config.py
src/hattrick_fun_with_flags/: __init__.py
