[project]
name = "hattrick-fwf"
version = "0.2.3"
description = "Hattrick Fun with Flags"
authors = [
    { name = "joe", email = "github@schicker.guru" }
]
dependencies = [
    "hattrick-libs==0.16.0",
    "flask>=3.0.0",
    "cryptography>=41.0.7",
    "CouchDB>=1.2",
    "gunicorn>=21.2.0",
    "pygal_maps_world>=1.0.2",
    "apscheduler>=3.10.4",
    "stripe>=8.1.0",
]
readme = "README.rst"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
        packages = ["fun_with_flags"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "pylint>=3.0.3",
    "ruff>=0.1.11",
    "pyment>=0.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true
