[project]
name = "hattrick-fwf"
version = "1.4.3"
description = "Hattrick Fun with Flags"
authors = [
    { name = "joe", email = "github@schicker.guru" }
]
dependencies = [
    "hattrick-libs==0.19.2",
    "flask==3.0.3",
    "cryptography>=41.0.7",
    "CouchDB>=1.2",
    "gunicorn>=21.2.0",
    "pygal_maps_world>=1.0.2",
    "apscheduler>=3.10.4",
    "stripe>=8.1.0",
    "flask-babel>=4.0.0",
    "jinja2>=3.1.4",
    "pygal>=3.0.5",
]
readme = "README.rst"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
        packages = ["fun_with_flags"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "pylint>=3.0.3",
    "ruff>=0.1.11",
    "pyment>=0.3.3",
    "setuptools>=71.0.0",
    "python-dotenv>=1.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true
