[project]
name = "hattrick-fwf"
version = "1.4.5"
description = "Hattrick Fun with Flags"
authors = [
    { name = "joe", email = "github@schicker.guru" }
]
dependencies = [
    "hattrick-libs==0.19.6",
    "flask==3.1.3",
    "cryptography>=41.0.7",
    "CouchDB>=1.2",
    "gunicorn>=21.2.0",
    "pygal_maps_world>=1.0.2",
    "apscheduler>=3.10.4",
    "stripe>=8.1.0",
    "flask-babel>=4.0.0",
    "jinja2>=3.1.4",
    "pygal>=3.0.5",
]
readme = "README.rst"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
        packages = ["fun_with_flags"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
    "pyment>=0.3.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "setuptools>=80.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true
